Added in foot for tracing

--- a/templates/pale-2/pale-2.hbs
+++ b/templates/pale-2/pale-2.hbs
@@ -649,5 +649,15 @@
     </tbody>
 </table>
 {{/eq}}
+
+<table class="footer">
+    <thead>
+    <tr>
+        <td>Teknisk sporingsinformasjon for denne legeerklæringen: {{ legeerklaering.id }} </td>
+        <td>Mottatt dato NAV: {{ iso_to_nor_date mottattDato }}</td>
+    </tr>
+    </thead>
+</table>
+
 </body>
 </html>
