Change colour to lightblue

--- a/templates/pale-2/pale-2.hbs
+++ b/templates/pale-2/pale-2.hbs
@@ -26,7 +26,7 @@
         }
 
         table thead {
-            background-color: #2ea12e;
+            background-color: lightblue;
         }
 
         table thead td {
