--- a/templates/pale-2/pale-2.hbs
+++ b/templates/pale-2/pale-2.hbs
@@ -467,7 +467,7 @@
         <td><h4>5.6</h4></td>
         <td><h4>Vurdering av arbeidsevnen og eventuelle hensyn</h4></td>
         <td>
-            <h4>5.6.1 Hva kan pasient ikke gjøre i den nåværende arbeid?</h4>
+            <h4>5.6.1 Hva kan pasient ikke gjøre i det nåværende arbeid?</h4>
             {{ legeerklaering.funksjonsOgArbeidsevne.kanIkkeGjenopptaNaverendeArbeid }}
         </td>
         <td>
