--- a/templates/pale-2/pale-2.hbs
+++ b/templates/pale-2/pale-2.hbs
@@ -94,19 +94,25 @@
 
         .tr75 {
             width: 75%;
+            font-size: 20px;
         }
 
         .infoblock {
+        }
+
+        .header-ikon {
+            width: 50%;
         }
     </style>
     <title>{{#eq validationResult.status "INVALID" }}AVVIST {{/eq}}Legeerklæring for {{ pasient.fornavn }}{{#if pasient.mellomnavn }} {{pasient.mellomnavn}}{{/if}} {{pasient.etternavn}} ({{ pasient.fnr }}) </title>
 </head>
 <body>
+<img class="header-ikon" alt="NAV logo"
+     src="{{ image "NAVLogoRed.png" }}" />
 <table class="header">
     <thead>
     <tr>
         <td class="tr75">{{#eq validationResult.status "INVALID" }}AVVIST {{/eq}}LEGEERKLÆRING</td>
-        <td>NAVs eksemplar</td>
     </tr>
     </thead>
 </table>
@@ -179,7 +185,8 @@
     </tr>
     <tr>
         <td><h4>1.5</h4></td>
-        <td>Yrke</td>
+        <td>Yrke
+        </td>
         <td>{{ legeerklaering.pasient.yrke }}</td>
     </tr>
     <tr>
