--- a/templates/pale-2/pale-2.hbs
+++ b/templates/pale-2/pale-2.hbs
@@ -109,8 +109,8 @@
     <title>{{#eq validationResult.status "INVALID" }}AVVIST {{/eq}}Legeerklæring for {{ pasient.fornavn }}{{#if pasient.mellomnavn }} {{pasient.mellomnavn}}{{/if}} {{pasient.etternavn}} ({{ pasient.fnr }}) </title>
 </head>
 <body>
-<img class="header-ikon" alt="NAV logo"
-     src="{{ image "NAVLogoRed.png" }}" />
+<img class="header-ikon" alt="NAV logo santa hat"
+     src="{{ image "NAVLogoRedSantaHat.png" }}" />
 <table class="header">
     <thead>
     <tr>
