Added in TODO to remove santa hat from NAV logo

--- a/templates/pale-2/pale-2.hbs
+++ b/templates/pale-2/pale-2.hbs
@@ -111,6 +111,10 @@
 <body>
 <img class="header-ikon" alt="NAV logo santa hat"
      src="{{ image "NAVLogoRedSantaHat.png" }}" />
+<!-- TODO after desember drop NAV logo santa hat
+<img class="header-ikon" alt="NAV logo"
+     src="{{ image "NAVLogoRed.png" }}" />
+-->
 <table class="header">
     <thead>
     <tr>
